tests/ui/delegation/glob-glob-conflict.stderr
error[E0201]: duplicate definitions with name `method`:
  --> $DIR/glob-glob-conflict.rs:26:5
   |
LL |     fn method(&self) -> u8;
   |     ----------------------- item in trait
...
LL |     reuse Trait1::*;
   |     ---------------- previous definition here
LL |     reuse Trait2::*;
   |     ^^^^^^^^^^^^^^^^ duplicate definition

error[E0201]: duplicate definitions with name `method`:
  --> $DIR/glob-glob-conflict.rs:32:5
   |
LL |     fn method(&self) -> u8;
   |     ----------------------- item in trait
...
LL |     reuse Trait1::*;
   |     ---------------- previous definition here
LL |     reuse Trait1::*;
   |     ^^^^^^^^^^^^^^^^ duplicate definition

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/glob-glob-conflict.rs:26:19
   |
LL |     reuse Trait2::*;
   |                   ^ argument #1 of type `&_` is missing
   |
note: method defined here
  --> $DIR/glob-glob-conflict.rs:7:8
   |
LL |     fn method(&self) -> u8;
   |        ^^^^^^  ----
help: provide the argument
   |
LL |     reuse Trait2::*(/* value */);
   |                    +++++++++++++

error[E0308]: mismatched types
  --> $DIR/glob-glob-conflict.rs:26:19
   |
LL |     reuse Trait2::*;
   |                   ^- help: consider using a semicolon here: `;`
   |                   |
   |                   expected `()`, found `u8`
   |                   expected `()` because of default return type

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/glob-glob-conflict.rs:32:19
   |
LL |     reuse Trait1::*;
   |                   ^ argument #1 of type `&_` is missing
   |
note: method defined here
  --> $DIR/glob-glob-conflict.rs:4:8
   |
LL |     fn method(&self) -> u8;
   |        ^^^^^^  ----
help: provide the argument
   |
LL |     reuse Trait1::*(/* value */);
   |                    +++++++++++++

error[E0308]: mismatched types
  --> $DIR/glob-glob-conflict.rs:32:19
   |
LL |     reuse Trait1::*;
   |                   ^- help: consider using a semicolon here: `;`
   |                   |
   |                   expected `()`, found `u8`
   |                   expected `()` because of default return type

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0061, E0201, E0308.
For more information about an error, try `rustc --explain E0061`.
